# backend_street_app

./: .gitignore  Dockerfile  Makefile  conftest.py  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  requirements.txt
app/config/: db_config.py  db_helper.py  security.py
app/migrations/: env.py
app/migrations/versions/: c316a47236d4_.py
app/models/: base_model.py
app/routers/: jobs_router.py  users_router.py
app/schemas/: jobs_schemas.py  user_schemas.py
app/service/: auth.py  jobs.py
app/tests/test_unit/: test_jobs.py  test_user.py
